<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"

    tools:context="com.ahmed.popular.movies.activities.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/movie_name"
            android:paddingBottom="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="30dp"
            android:text="@string/title"
            android:textColor="@color/col_movie_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="100dp"
                    android:layout_height="160dp"
                    android:src="@drawable/noprofile" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/release_date" />
                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/duration" />
                    <TextView
                        android:id="@+id/vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/vote_average" />

                    <Button
                        android:id="@+id/as_favorite"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/favorite_button" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/plot_synopsis" />


        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textSize="30sp"
            android:textColor="#000000"/>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_list"
            android:nestedScrollingEnabled="true"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textSize="30sp"
            android:textColor="#000000"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reviews_list"
            android:nestedScrollingEnabled="true"/>


    </LinearLayout>



</ScrollView>
